# cpp-project

./: CMakeLists.txt  CMakeLists.txt   Dockerfile  Jenkinsfile  docker-compose.yml
some/: Dockerfile
src/: functions.cpp  functions.h  main.cpp
tests/: CMakeLists.txt  test.cpp
